--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --timeout 2000 --exit"
+    "test": "mocha --timeout 2000 --exit",
+    "start": "mocha --timeout 2000 --exit & node app.js"
   },
   "author": "",
   "license": "ISC",
@@ -15,6 +16,7 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "ejs": "^2.6.1",
     "express": "^4.17.0",
     "morgan": "^1.9.1"
   }
