--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha --timeout 2000 --exit",
-    "start": "mocha --timeout 2000 --exit & node app.js"
+    "start": "mocha --timeout 2000 --exit & nodemon app.js"
   },
   "author": "",
   "license": "ISC",
