--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "body-parser": "^1.19.0",
     "ejs": "^2.6.1",
     "express": "^4.17.0",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "mysql": "^2.17.1"
   }
 }
