--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "consign": "^0.1.6",
     "dotenv": "^8.2.0",
     "ejs": "^2.6.1",
     "express": "^4.17.0",
     "interval-promise": "^1.3.0",
     "morgan": "^1.9.1",
-    "mysql": "^2.17.1"
+    "mysql": "^2.17.1",
+    "path": "^0.12.7"
   }
 }
